--- a/ansible-run-adhoc-cmd.yml
+++ b/ansible-run-adhoc-cmd.yml
@@ -1,9 +1,6 @@
 ---
 # Run a command on a node
-- hosts: all-servers
-  remote_user: root
-  sudo: no
-  vars:
+- vars:
       - command_variable: "/usr/bin/date > /tmp/ansible-command.log"
   tasks:
       - name: run this command and ignore the result
