--- a/ansible-run-adhoc-cmd.yml
+++ b/ansible-run-adhoc-cmd.yml
@@ -2,7 +2,7 @@
 # Run a command on a node
 - hosts: mwelk-cftest
   remote_user: root
-  sudo: no
+  become: no
 - vars:
       - command_variable: "/usr/bin/date > /tmp/ansible-command.log"
   tasks:
